# meshtastic-irc

./: Cargo.toml  README.md  config.example.json  config.example.jsonc  config.json
src/: bridge.rs  config.rs  irc_handler.rs  main.rs  meshtastic_handler.rs  mqtt_handler.rs  serial_detector.rs
