[package]
name = "meshtastic-irc"
version = "0.1.0"
edition = "2021"

[dependencies]
meshtastic = "0.1"
tokio = { version = "1", features = ["full"] }
irc = "0.15"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
serialport = "4.2"
rumqttc = "0.24"
prost = "0.14"
